Just add js files

--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
+    <script src="/src/resources/index.js"></script>
   </body>
 </html>
