--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -9,11 +9,21 @@
     {% endblock %}
  
 {% block content %}
-<h1>Hello<h1>
-<p>
-  We just extended the base template. Anything we put in the content blocks will
-  be specific to the index.html page.
-</p>
+    <div class="row">
+      <div class="parent-box">
+        <div class="box">
+          <h1>Make your question here</h1>
+          <form action="/question/api" id="questionForm" method="POST">
+            <textarea name="question" id="questionForm" class="textarea-box">Add your question here.</textarea>                      
+            <input type="number" name="answer1" id="trueAnswerBox" class="answer-box">
+            <input type="number" name="answer2" id="falseAnswerBox" class="answer-box">
+            <input type="number" name="answer3" id="falseAnswerBox" class="answer-box">
+            <input type="number" name="answer" id="falseAnswerBox" class="answer-box">
+            <input type="button" value="Add" class="add">
+          </form>
+        </div>
+      </div>
+    </div>
 {% endblock %}
 
 {% block script %}
