--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,11 @@
           <h1>Make your question here</h1>
           <form action="/question/api" id="questionForm" method="POST">
             <textarea name="question" id="questionForm" class="textarea-box">Add your question here.</textarea>                      
-            <input type="number" name="answer1" id="trueAnswerBox" class="answer-box">
-            <input type="number" name="answer2" id="falseAnswerBox" class="answer-box">
-            <input type="number" name="answer3" id="falseAnswerBox" class="answer-box">
-            <input type="number" name="answer" id="falseAnswerBox" class="answer-box">
-            <input type="button" value="Add" class="add">
+            <input type="number" name="answers" id="trueAnswerBox" class="answer-box">
+            <input type="number" name="answers" id="falseAnswerBox" class="answer-box">
+            <input type="number" name="answers" id="falseAnswerBox" class="answer-box">
+            <input type="number" name="answers" id="falseAnswerBox" class="answer-box">
+            <input type="submit" value="Add" class="add">
           </form>
         </div>
       </div>
