--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
       <div class="parent-box">
         <div class="box">
           <h1>Make your question here</h1>
-          <form action="/question/api" id="questionForm" method="POST">
-            <textarea name="question" id="questionForm" class="textarea-box">Add your question here.</textarea>                      
+          <form action="/question/api" id="questionForm" method="post">
+            <textarea name="questionString" id="questionForm" class="textarea-box">Add your question here.</textarea>                      
             <input type="number" name="answers" id="trueAnswerBox" class="answer-box">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box">
