Done redirect and ajax settings

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="parent-box">
         <div class="box">
           <h1>CGC Make Question</h1>
-          <form action="/question/api" id="questionForm" method="post">
+          <form action="/api/question" id="questionForm" method="post">
             <textarea name="questionString" id="questionForm" class="textarea-box">Add your question here.</textarea>                 
             <input type="number" name="answers" id="trueAnswerBox" class="answer-box" placeholder="True Answer" onfocus="this.placeholder = ''">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box" placeholder="False Answer" onfocus="this.placeholder = ''">
