Done . Nanti sambung

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -8,6 +8,20 @@
     <!-- endinject -->
     {% endblock %}
  
+
+    {% block overlay %}
+        <div class="overlay"></div>
+        <div class="sidebar">
+          <div class="all-question">
+            <h1 class="title">All Question</h1>
+            <div class="button">Edit</div>
+            <ol id="questionsBlock">
+              <li id="list"></li>
+            </ol>
+          </div>
+        </div>
+    {% endblock %}
+
 {% block content %}
     <div class="row">
       <div class="parent-box">
