--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
         <div class="sidebar">
           <div class="all-question">
             <h1 class="title">All Question</h1>
-            <div class="button">Edit</div>
+            <button id="get">Refresh</button>
+            <hr>            
             <ol id="questionsBlock">
-              <li id="list"></li>
             </ol>
           </div>
         </div>
