--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -14,7 +14,10 @@
         <div class="sidebar">
           <div class="all-question">
             <h1 class="title">All Question</h1>
-            <button id="get">Refresh</button>
+            <div class="close-box" onclick="closeBox()">
+              <i class="glyphicon glyphicon-remove remove-icon"></i>
+              <br><p class="close-text">Close</p>
+            </div>
             <hr>            
             <ol id="questionsBlock">
             </ol>
