--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -31,13 +31,17 @@
         <div class="box">
           <h1>CGC Make Question</h1>
           <form action="/api/question" id="questionForm" method="post">
-            <textarea name="questionString" id="questionForm" class="textarea-box">Add your question here.</textarea>                 
+            <textarea name="questionString" id="questionForm" class="textarea-box">Add your question here.</textarea>
             <input type="number" name="answers" id="trueAnswerBox" class="answer-box" placeholder="True Answer" onfocus="this.placeholder = ''">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box" placeholder="False Answer" onfocus="this.placeholder = ''">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box" placeholder="False Answer" onfocus="this.placeholder = ''">
             <input type="number" name="answers" id="falseAnswerBox" class="answer-box" placeholder="False Answer" onfocus="this.placeholder = ''">
             <label for="timeBox" id="timeBoxLabel">Time to complete the question :</label>
             <input type="number" name="time" id="timeBox" value="60" onfocus="this.value = ''"><p style="font-size: 24px;color: #535353; display: inline-block; margin-left : 14px;">seconds</p>
+            <div class="form-group">
+                <label for="level" id="timeBoxLabel">Level of Question = <output class="rangeValue" id="rangevalue">1</output></label>
+                <input type="range" id="level" min="1" max="10" oninput="rangevalue.value=value" onchange="rangevalue.value=value" />
+            </div>
             <input type="submit" value="Add" class="add">
           </form>
         </div>
