--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
             <input type="number" name="time" id="timeBox" value="60" onfocus="this.value = ''"><p style="font-size: 24px;color: #535353; display: inline-block; margin-left : 14px;">seconds</p>
             <div class="form-group">
                 <label for="level" id="timeBoxLabel">Level of Question = <output class="rangeValue" id="rangevalue">1</output></label>
-                <input type="range" id="level" min="1" max="10" oninput="rangevalue.value=value" onchange="rangevalue.value=value" />
+                <input type="range" name="level" id="level" min="1" max="10" oninput="rangevalue.value=value" onchange="rangevalue.value=value" />
             </div>
             <input type="submit" value="Add" class="add">
           </form>
