Done pagination FRONT END and alter AJAX on query

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     
     <!-- inject:css -->
+    <link rel="stylesheet" href="../css/pagination.css">
     <link rel="stylesheet" href="../css/styles.css">
     <!-- endinject -->
     
