--- a/public/input.html
+++ b/public/input.html
@@ -23,15 +23,15 @@ Username
 
   </head>
  
-  <body>
+  <body onload="checkCookie()">
  
-    <div class="container container-fluid">
+    <div class="container-fluid">
       
-<div class="row">
-    <form action="/app/user/input" method="post">
+<div class="row" id="input">
+    <form action="api/app/user/input" method="post">
     <label for="from">Your name :</label>
-        <input type="text" name="from" id="from"/>
-        <input type="submit" value="Send">
+        <input type="text" name="from" id="from">
+        <input type="submit" value="Send" id="nameSubmit">
     </form>
 </div>
 
@@ -43,8 +43,8 @@ Username
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
     
 <!-- inject:js -->
-<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
+<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/index.js"></script>
 <!-- endinject -->
 
