--- a/public/character.html
+++ b/public/character.html
@@ -23,7 +23,7 @@ Character choose
 
   </head>
  
-  <body onload="checkCookie()">
+  <body onload="checkCookie()" id="bodyInput">
  
     <div class="container-fluid">
       
@@ -39,8 +39,8 @@ Character choose
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
     
 <!-- inject:js -->
-<script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
+<script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
 <!-- endinject -->
 
