Countdown auto send and new question available

--- a/public/character.html
+++ b/public/character.html
@@ -23,7 +23,7 @@ Character choose
 
 </head>
 
-<body onload="gameStarted(1)" id="bodyInput">
+<body id="bodyInput">
 
     <div class="container-fluid">
         
