--- a/public/app.html
+++ b/public/app.html
@@ -41,6 +41,8 @@
 </div>
 
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
     
     <!-- inject:js -->
     <script src="../js/jquery/jquery-3.3.1.min.js"></script>
