Much better random question answers

--- a/public/character.html
+++ b/public/character.html
@@ -27,7 +27,14 @@ Character choose
 
     <div class="container-fluid">
         
+<button id='chat' class='chat'>Chat</button>
 <div class="append"></div>
+<div id="chatbox">
+    <div id="close" class="close">
+        <i class="glyphicon glyphicon-remove remove-icon"></i>
+        <p class="close-chat">Close</p>
+    </div>
+</div>
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
