--- a/public/character.html
+++ b/public/character.html
@@ -30,6 +30,7 @@ Character choose
     <div class="container-fluid">
         
 <button id='chat' class='chat'>Chat</button>
+<button id='ranking' class='ranking'>Ranks</button>
 <div class="append"></div>
 <div id="chatbox">
     <div id="close-chat" class="close-chat">
@@ -52,8 +53,8 @@ Character choose
     <script src="/socket.io/socket.io.js"></script>
     
 <!-- inject:js -->
-<script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
+<script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
 <!-- endinject -->
 
