--- a/public/character.html
+++ b/public/character.html
@@ -30,7 +30,7 @@ Character choose
     <div class="container-fluid">
         
 <button id='chat' class='chat'>Chat</button>
-<button id='ranking' class='ranking'>Ranks</button>
+<button id='ranking' class='ranking' onclick='rankClick()'>Ranks</button>
 <div class="append"></div>
 <div id="chatbox">
     <div id="close-chat" class="close-chat">
@@ -43,6 +43,23 @@ Character choose
     <button type='submit' id='sendChat' form='sendMessage'>Send</button>
     </form>
 </div>
+<div id="rankbox">
+    <div id="close-chat" class="close-chat">
+       <i class="fas fa-arrow-left"></i>
+        <p class="close-text-chat">Close</p>
+    </div>
+    <table class="blueTable">
+    <thead>
+    <tr>
+    <th>NO</th>
+    <th>PLAYER NAME</th>
+    <th>SCORE</th>
+    </tr>
+    </thead>
+    <tbody id='appendTable'>
+    </tbody>
+    </table>
+</div>
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -53,8 +70,8 @@ Character choose
     <script src="/socket.io/socket.io.js"></script>
     
 <!-- inject:js -->
-<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
+<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/index.js"></script>
 <!-- endinject -->
 
