Done optimizing and fix bugs

--- a/public/404.html
+++ b/public/404.html
@@ -10,5 +10,7 @@
      
     Sorry , your request for the page is not found !
     
+
+    <script src="/socket.io/socket.io.js"></script>    
 </body>
 </html>
