--- a/public/main.html
+++ b/public/main.html
@@ -44,7 +44,7 @@ Character choose
     </form>
 </div>
 <div id="rankbox">
-    <div id="close-chat" class="close-chat">
+    <div id="rank-chat" class="rank-chat">
        <i class="fas fa-arrow-left"></i>
         <p class="close-text-chat">Close</p>
     </div>
@@ -70,8 +70,8 @@ Character choose
     <script src="/socket.io/socket.io.js"></script>
     
 <!-- inject:js -->
-<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
+<script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/index.js"></script>
 <!-- endinject -->
 
