--- a/public/input.html
+++ b/public/input.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
     <title>
-      
-Username
-
+    Enter Name (CGC)
     </title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
