New LOTTIE FILES ! Cool ! But have to configure animations again

--- a/public/input.html
+++ b/public/input.html
@@ -8,7 +8,7 @@
  
     <title>
       
-Username
+Enter Name (CGC)
 
     </title>
     <!-- Bootstrap -->
@@ -49,6 +49,7 @@ Username
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
   </body>
