--- a/public/create.html
+++ b/public/create.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
     <title>
-      This is the new title of our webpage
+      CGC Content Management System
     </title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -77,6 +77,7 @@
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
 <script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
   </body>
