--- a/public/main.html
+++ b/public/main.html
@@ -6,9 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/media/favicon.png" type="image/x-icon">    
 
     <title>
-    Let's Play
+        
+Let's Play
+
     </title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -69,8 +72,8 @@
     
 <!-- inject:js -->
 <script src="../js/jquery/jquery-3.3.1.min.js"></script>
-<script src="../js/nunjucks/nunjucks.min.js"></script>
 <script src="../js/index.js"></script>
+<script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
 
 </body>
