Done optimizing with BarbaJS

--- a/public/404.html
+++ b/public/404.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
     
 <!-- inject:css -->
+<link rel="stylesheet" href="../css/pagination.css">
 <link rel="stylesheet" href="../css/styles.css">
 <!-- endinject -->
 
@@ -81,6 +82,7 @@
     <script src="/socket.io/socket.io.js"></script> 
     
 <!-- inject:js -->
+<script src="../js/barba/barba.min.js"></script>
 <script src="../js/index.js"></script>
 <script src="../js/lottie/lottie.js"></script>
 <!-- endinject -->
